[tool.poetry]
name = "tsd"
version = "0.1.0"
description = ""
authors = [ "Ben <benjamin@selas.studio>"]
readme = "README.md"
dependencies = {python = "^3.9", torch = { version ="=1.12.0+cu113", source = "pytorch" }, pytorch-lightning = "^1.7.1"}

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu113/"
secondary = true

[build-system]
requires = [ "relaxed-poetry-core>=0.1.2"]
build-backend = "poetry.core.masonry.api"